    - offer interface configuration on explicit configuration or when no
      interface is being specified (the used interface is set as default)
    - specify whether the get_string result can be empty or not
  * reportbug/debianbts.py
    - use ui proper functions instead of ewrite; thanks to Jan Hauke Rahm for
      the report; Closes: #521113
  * reportbug/ui/gtk2_ui.py
    - added VTE to handle bugscripts and mutt
    - support for spell checking in the bug report editor
    - fix display_failure handling
    - make BTS query tree columns sortable
    - ui layout improvements
  * reportbug/ui/urwid_ui.py
    - fix default value in non-multiple menus; Closes: #496969
  * debian/control
    - added suggests for python-vte and python-gnome2-extras (for spell check)
  * debian/copyright, reportbug/ui/gtk2_ui.py
    - bump copyright years

 -- Sandro Tosi <morph@debian.org>  Tue, 31 Mar 2009 23:40:35 +0200

reportbug (4.0) unstable; urgency=low

  * Uploading to unstable, since Lenny has been released
  * reportbug/__init__.py
    - updated version number
  * conf/reportbug.conf, debian/rules
    - moved reportbug.conf to conf/ dir
  * share/{handle_bugscript, presubj, reportbug.el, script}, setup.py
    - moved files installed in /usr/share/... into share/ to clean up top level
      directory
  * reportbug/test_hiermatch.py, test/test_hiermatch.py
    - removed reportbug/test_hiermatch.py, partially merget into
      test/test_hiermatch.py
  * bin/*, reportbug/*, reportbug/ui/*, debian/copyright
    - updated copyright information, in particular adding me 
  * reportbug/urlutils.py
    - added a timeout of 1 minute for url retrieving; thanks to Michal Suchanek
      for the report; Closes: 516449
  * debian/{control, rules}
    - switch from python-central to python-support
  * debian/control
    - bump Standards-Version to 3.8.1 (no changes needed)
    - updated Vcs-* fields, we are now using Git
    - removed 'DM-Upload-Allowed' flag, we are all DDs now